--- a/build.gradle
+++ b/build.gradle
@@ -24,11 +24,12 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-devtools'
+	//SQL 실행 파라미터를 로그로 남기기
+	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.8.1'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
 	//JUnit4 추가
 	testImplementation('org.junit.vintage:junit-vintage-engine') {
 		exclude group: 'org.hamcrest', module: 'hamcrest-core'
