20221210 주문도메인 개발중

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,3 +16,7 @@ spring:
   logging.level:
     org.hibernate.SQL : debug
     org.hibernate.type: trace
+
+  thymeleaf:
+    prefix: classpath:/templates/
+    suffix: .html
