--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,11 +7,11 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
     properties:
       hibernate:
        format_sql: true
-       show_sql: true
+#       show_sql: true
 
   logging.level:
     org.hibernate.SQL : debug
